Update - add sourdough bread

--- a/index.html
+++ b/index.html
@@ -31,14 +31,61 @@
             </tr>  
         </table>
 
-        <ul>
-            <li>Unordered List Item 1</li>
-            <li>Unordered List Item 2</li>
-        </ul>
-        <ol>
-            <li>Ordered List Item 1</li>
-            <li>Ordered List Item 2</li>
-        </ol>
-    </body>
-    
+        <h1>Sourdough Bread</h1>
+
+        <h2>Tools and Ingredients:</h2>
+        <div id="recipe">
+            <ul>
+                <li>Glass Container - 3/4 to 1 L (loose fitting lid)</li>
+                <li>Rubber Spatula</li>
+                <li>Kitchen Scale</li>
+                <li> <span class="important">Organic Unbleached Stone Rye </span> Flour</li>
+                <li> <span class="important">Organic Unbleached All-Purpose </span> Flour</li>
+            </ul>
+        </div>
+        <h2>Steps:</h2>
+        <h4>Creating the Monster</h4>
+            <ol>
+                <li>Write down and record the weight of the jar (without lid if lid removable)</li>
+                <li>Add 100g of rye flour</li>
+                <li>Add 150g of lukewarm water (about 85 degrees F)</li>
+                <li>Vigorously stir until everything is incorporated</li>
+                <li>Cover with loose lid and label with date started</li>
+            </ol>
+        <h4>Feeding the Monster</h4>
+        <h6>Day 2 & 3</h6>
+            <ol>
+                <li>Leave 70g of mature starter behind, toss the rest (this is why we took jar weight)</li>
+                <li>Add 50g of Stone Ground Rye Flour, and 50g of the unbleached all-purpose flour</li>
+                <li>Add 115g of lukewarm water (85 degrees F)</li>
+                <li>STIR</li>
+            </ol>
+        <h6>Day 4 and 5 - Drop Water Content</h6>
+            <ul>
+                <li>70g of mature starter</li>
+                <li>50g of stone ground rye</li>
+                <li>50g of unbleached all-purpose</li>
+                <li>100g of lukewarm water at 80 degrees F</li>
+            </ul>
+        <h6>Day 6 - Drop Mature Content</h6>
+            <ul>
+                <li>50g of mature starter</li>
+                <li>50g of stone ground rye</li>
+                <li>50g of unbleached all-purpose</li>
+                <li>100g of lukewarm water at 80 degrees F</li>
+            </ul>
+        <h6>Day 7 - Drop Mature Content (Again)</h6>
+            <ul>
+                <li>25g of mature starter</li>
+                <li>50g of stone ground rye</li>
+                <li>50g of unbleached all-purpose</li>
+                <li>100g of lukewarm water at 80 degrees F</li>
+                <li>Repeat the process of day 7 feeding <span class="important">FOREVER</span></li>
+            </ul>
+        <h6>Notes</h6>
+            <ul>
+                <li>If you forget to feed for a day or two it will be ok</li>
+                <li>Feeding every 24 hours is perfectly acceptable, every 12 hours is better</li>
+            </ul>
+    </body> 
 </html>
