Created Header class

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <div class="header">
         <h1>meSite - Nickolas Gravel</h1>
+        </div>
 
         <p>
             This is the homepage to my website, a personal project that is for
